# fund_raising

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: deploy.yml
api/: pagination.py  permissions.py
api/v1/: urls.py  views.py
api/v1/collects/: serializers.py  views.py
api/v1/payments/: serializers.py  views.py
collects/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  utils.py  validators.py  views.py
collects/migrations/: 0001_initial.py  0002_initial.py  0003_alter_collect_options_collect_cover_collect_occasion_and_more.py  0004_alter_collect_cover.py  0005_alter_collect_cover.py
dev_tools/management/commands/: generate_test_data.py
docker/web_app/: Dockerfile
fund_raising/: __init__.py  asgi.py  base.py  celery.py  development.py  production.py  settings.py  test_settings.py  urls.py  wsgi.py
payments/: admin.py  models.py  serializers.py  tasks.py  views.py
payments/migrations/: 0001_initial.py  0002_initial.py  0003_alter_payment_options_alter_payment_collect_and_more.py
tests/: conftest.py  factories.py  test_api.py
users/: admin.py  constants.py  models.py
